# ot-harjoitustyo

./: README.md  TEsti.txt  workout_diary_workspace.code-workspace
esimerkki_tkinter/esmes/: goodbyeview.py  helloview.py  password.py  ui.py
esimerkki_tkinter/fish/: fishing.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko3/: Untitled Diagram.drawio
laskarit/viikko3/Markdown_testailua/: classDiagram_testi.md
poetry-testi/: pyproject.toml
poetry-testi/src/: testi_unittest.py
python-exercise-diary/: vaatimusmaarittely.md
python-exercise-diary/dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
workout_diary/: .gitignore  pyproject.toml  tasks.py
workout_diary/data/: database.sqlite
workout_diary/dokumentaatio/: architecture.drawio  architecture.md  changelog.md  manual.md  testing_document.md  tuntikirjanpito.md  vaatimusmaarittely.md
workout_diary/src/: database_connection.py  initialize_database.py  main.py
workout_diary/src/entities/: calendar.py  user.py  workout.py
workout_diary/src/repositories/: user_repository.py  workout_repository.py
workout_diary/src/services/: user_service.py  workout_service.py
workout_diary/src/tests/repositories/: user_repository_test.py  workout_repository_test.py
workout_diary/src/tests/services/: service_test.py  user_service_test.py  workout_service_test.py
workout_diary/src/ui/: login_window.py  main_window.py  new_user_window.py  new_workout.py  new_workout_window.py  ui.py  ui_final.py  ui_testi.py
(+8 files in other folders)
