[tool.poetry]
name = "workout_diary"
version = "0.1.0"
description = ""
authors = ["Ville <ville.tonteri@helsinki.fi>"]
readme = "README.md"
packages = [{include = "workout_diary"}]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
